examples/test/testpolicy12557.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12557
  namespace: namespace373
spec:
  podSelector:
    matchLabels:
      key27: value8
      key11: value14
      key12: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value21
          key31: value1
          key8: value18
      podSelector:
        matchLabels:
          key26: value8
          key47: value15
          key40: value19
